# worky

./: .dockerignore  .example.env  .flake8  Dockerfile  docker-compose.prod.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  tailwind.config.js
.vim/: coc-settings.json
app/: settings.py  urls.py
app/departments/: admin.py  apps.py  models.py
app/departments/migrations/: 0001_initial.py
app/employees/: admin.py  apps.py  models.py  urls.py  views.py
app/employees/migrations/: 0001_initial.py  0002_rename_skills_skill.py
app/employees/templatetags/: employee_tags.py
app/static/css/: input.css
app/templates/: base.html
app/templates/employees/: home.html  update.html
app/templates/includes/: topbar.html
nginx/: nginx.conf
scripts/: entrypoint.sh  start-dev.sh  start-prod.sh
