[tool.poetry]
name = "Worky Dashboard"
version = "0.1.0"
description = "Modern dashboard for management your company"
authors = ["Alisson Lopez <alisson.hdz.lopez@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
Pillow = "^9.1.1"
psycopg2 = "^2.9.3"
django-stubs-ext = "^0.4.0"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
django-browser-reload = "^1.6.0"
django-widget-tweaks = "^1.4.12"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.950"
black = "^22.3.0"
django-stubs = {extras = ["compatible-mypy"], version = "^1.11.0"}
isort = "^5.10.1"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 90
include_trailing_comma = true
force_grid_wrap = 0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
